Update version and docs a little

--- a/rebar.config
+++ b/rebar.config
@@ -1,3 +1,14 @@
 %% vim: ts=4 sw=4 et ft=erlang
+{project_plugins, [rebar3_ex_doc]}.
+
+{hex, [{doc, ex_doc}]}.
+
+{ex_doc, [
+    {source_url, <<"https://github.com/choptastic/twilio_sms">>},
+    {extras, [<<"README.md">>, <<"LICENSE.md">>]},
+    {main, <<"readme">>}
+]}.
+
 {deps, [
 ]}.
+
