slight rebar.config update

--- a/rebar.config
+++ b/rebar.config
@@ -5,7 +5,7 @@
 
 {ex_doc, [
     {source_url, <<"https://github.com/choptastic/twilio_sms">>},
-    {extras, [<<"README.md">>, <<"LICENSE.md">>]},
+    {extras, [<<"README.md">>, <<"LICENSE">>]},
     {main, <<"readme">>}
 ]}.
 
